feat() : añadir info java jar